fixed overlap of cart

--- a/styles/order.scss
+++ b/styles/order.scss
@@ -30,7 +30,7 @@ h4 {
   background-position-x: -670px;
   height: 100%;
   flex-direction: column;
-  width: 19em;
+  width: 16em;
   padding-left: 3em;
   padding-top: 8em;
 }
@@ -44,7 +44,7 @@ h4 {
 
 #menu-items {
   height: 100%;
-  width: 95%;
+  width: 76%;
   display: flex;
   justify-content: center;
 }
@@ -65,7 +65,7 @@ h4 {
 
 #all-items {
   display: flex;
-  width: 57%;
+  width: 100%;
   background-color: whitesmoke;
   opacity: 93%;
   margin-left: 15em;
